--- a/sprite_60fps.css
+++ b/sprite_60fps.css
@@ -1,3 +1,14 @@
+.blinking{
+    animation:blinkingText 0.8s infinite;
+}
+@keyframes blinkingText{
+    0%{     color: #000;    }
+    49%{    color: transparent; }
+    50%{    color: transparent; }
+    99%{    color:transparent;  }
+    100%{   color: #000;    }
+}
+
 @keyframes play120 {
   0% {
     background-position: 0px 0px;
